testsuite/tests/rename/should_fail/T25991b1.hs
{-# LANGUAGE TypeFamilies, DataKinds #-}

module T25991b1 where

import T25991b_helper (C((#)))

type S a b = a # b